Created template and view for home page

--- a/resume/templates/resume/base.html
+++ b/resume/templates/resume/base.html
@@ -29,8 +29,8 @@
             <div class="text-center">
                 <h1 class="display-4">Welcome to the ResumeCrafter</h1>
                 <p class="lead">Create your resume in simple steps</p>
-                <a href="{% url 'accept' %}" class="btn btn-primary btn-lg mx-2">Start Creating Your Resume</a>
-                <a href="{% url 'resumes' %}" class="btn btn-info btn-lg mx-2">Download Your Resume</a>
+                <a href="{% url 'resume_form' %}" class="btn btn-primary btn-lg mx-2">Start Creating Your Resume</a>
+                <a href="#" class="btn btn-info btn-lg mx-2">Download Your Resume</a>
             </div>
         </div>
     </div>
