Optimize the project functionality

--- a/resume/templates/resume/base.html
+++ b/resume/templates/resume/base.html
@@ -17,14 +17,29 @@
               </svg>
             <b>ResumeCrafter</b>
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="ml-auto d-flex align-items-center">
+            {% if user.is_authenticated %}
+                <span class="text-light mr-3">Hello, {{ user.username }}! 😎</span>
+                <a href="{% url 'logout' %}" class="btn btn-outline-light">Logout</a>
+            {% else %}
+                <a href="{% url 'login' %}" class="btn btn-outline-light">Login</a>
+            {% endif %}
         </div>
+        
     </nav>
+
+    <div class="content mb-0">
+        {% if messages %}
+          {% for message in messages %}
+            <div class="alert alert-{{ message.tags }} text-center" style="background: #f0ad4e;">
+              <b>{{ message }}</b>
+            </div>
+          {% endfor %}
+        {% endif %}
+      </div>
+      
     {% block content %}
-    <div class="container py-5">
+    <div class="container py-4">
         <div class="d-flex justify-content-center align-items-center" style="height: 80vh;">
             <div class="text-center">
                 <h1 class="display-4">Welcome to the ResumeCrafter</h1>
