--- a/resume/templates/resume/register.html
+++ b/resume/templates/resume/register.html
@@ -1,11 +1,37 @@
-{% comment %} {% extends 'base.html' %} {% endcomment %}
+{% extends 'resume/base.html' %}
+{% load static %}
 
-{% comment %} {% block title %}Register{% endblock %} {% endcomment %}
+{% block title %}Register{% endblock %}
 
-{% comment %} {% block content %} {% endcomment %}
-<form method="POST">
-    {% csrf_token %}
-    {{ form }}
-    <button type="submit"> Signup </button>
-</form>
-{% comment %} {% endblock %} {% endcomment %}
+{% block content %}
+<div class="container py-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <h2 class="text-center mb-4">Register</h2>
+            <form method="POST" class="bg-secondary p-4 rounded">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="{{ form.username.id_for_label }}">{{ form.username.label }}</label>
+                    <input type="text" class="form-control" id="{{ form.username.id_for_label }}" name="{{ form.username.name }}" value="{{ form.username.value|default:'' }}">
+                </div>
+                <div class="form-group">
+                    <label for="{{ form.email.id_for_label }}">{{ form.email.label }}</label>
+                    <input type="email" class="form-control" id="{{ form.email.id_for_label }}" name="{{ form.email.name }}" value="{{ form.email.value|default:'' }}">
+                </div>
+                <div class="form-group">
+                    <label for="{{ form.password1.id_for_label }}">{{ form.password1.label }}</label>
+                    <input type="password" class="form-control" id="{{ form.password1.id_for_label }}" name="{{ form.password1.name }}">
+                </div>
+                <div class="form-group">
+                    <label for="{{ form.password2.id_for_label }}">{{ form.password2.label }}</label>
+                    <input type="password" class="form-control" id="{{ form.password2.id_for_label }}" name="{{ form.password2.name }}">
+                </div>
+                <button type="submit" class="btn btn-primary btn-block">Signup</button>
+            </form>
+            <div class="text-center mt-3">
+                <a href="{% url 'login' %}" class="text-light">Already have an account? Login here</a>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
