--- a/resume/templates/resume/view_resumes.html
+++ b/resume/templates/resume/view_resumes.html
@@ -8,20 +8,31 @@
 {% endfor %} {% endcomment %}
 
 <div class="container">
-    <h1 class="text-center mb-4">Available Resumes</h1>
+    <h1 class="text-center mb-4 mt-3">Available Resumes</h1>
     <div class="row">
-        {% for profile in profiles %}
-            <div class="col-md-4">
-                <div class="resume-card">
-                    <h4>{{ profile.full_name }}</h4>
-                    <p><strong>Course Title:</strong> {{ profile.course_title }}</p>
-                    <p><strong>Course Branch:</strong> {{ profile.course_branch }}</p>
-                    <p><strong>Email:</strong> {{ profile.email }}</p>
-                    <p><strong>Location:</strong> {{ profile.location }}</p>
-                    <a href="/{{ profile.id }}" class="btn btn-dark download-btn">Download</a>
+        {% if profiles %}
+            {% for profile in profiles %}
+                <div class="col-md-4">
+                    <div class="resume-card">
+                        <h4>{{ profile.full_name }}</h4>
+                        <p><strong>Course Title:</strong> {{ profile.course_title }}</p>
+                        <p><strong>Course Branch:</strong> {{ profile.course_branch }}</p>
+                        <p><strong>Email:</strong> {{ profile.email }}</p>
+                        <p><strong>Location:</strong> {{ profile.location }}</p>
+                        <a href="/{{ profile.id }}" class="btn btn-dark download-btn">Download</a>
+                    </div>
                 </div>
+            {% endfor %}
+        {% else %}
+        <div class="container text-center my-5">
+            <div class="alert alert-warning p-5 shadow-lg rounded">
+                <h2 class="display-4 mb-4">Oops!</h2>
+                <p class="lead">You haven't created any resume yet. Please go ahead and create a resume to download it here.</p>
+                <a href="{% url 'resume_form' %}" class="btn btn-primary btn-lg mt-3">Create Your Resume</a>
             </div>
-        {% endfor %}
+        </div>
+
+        {% endif %}
     </div>
 </div>
 {% endblock %}
