--- a/resume/templates/resume/login.html
+++ b/resume/templates/resume/login.html
@@ -3,29 +3,32 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<div class="container py-5">
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <h2 class="text-center mb-4">Login</h2>
-            <form method="POST" class="bg-secondary p-4 rounded" action="{% url 'login' %}">
-                {% csrf_token %}
-                <div class="form-group">
-                    <label for="username">Username</label>
-                    <input type="text" class="form-control" id="username" name="username" required>
-                </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" class="form-control" id="password" name="password" required>
-                </div>
-                {% if error %}
-                <div class="alert alert-danger">{{ error }}</div>
-                {% endif %}
-                <button type="submit" class="btn btn-primary btn-block">Login</button>
-            </form>
-            <div class="text-center mt-3">
-                <a href="{% url 'register' %}" class="text-light">Don't have an account? Register here</a>
+<div class="container-fluid vh-100 d-flex justify-content-center align-items-center">
+    <div class="col-md-5" style="margin-top: -150px;">
+        <h2 class="text-center" style="color: #418da6;">LOGIN</h2>
+        <form method="POST" class="p-4 rounded shadow" action="{% url 'login' %}">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="username" class="text-light">Username</label>
+                <input type="text" class="form-control custom-input" id="username" name="username" required>
             </div>
+            <div class="form-group ">
+                <label for="password" class="text-light">Password</label>
+                <input type="password" class="form-control custom-input" id="password" name="password" required>
+            </div>
+            {% if error %}
+            <div class="text-danger text-center mb-1" style="margin-top: -10px !important;">{{ error }}</div>
+            {% endif %}
+
+            <button type="submit" class="btn btn-custom btn-block">Login</button>   
+        </form>
+        <div class="text-center mt-2">
+            Don't have an account? <a href="{% url 'register' %}" style="color: #418da6; text-decoration: underline; transition: text-shadow 0.3s ease, color 0.3s ease;" onmouseover="this.style.color='#418da6'; this.style.textShadow='0 0 8px #418da6';" onmouseout="this.style.color='#418da6'; this.style.textShadow='none';">
+                <u>Register here</u>
+            </a>
+            
         </div>
     </div>
 </div>
+
 {% endblock %}
