--- a/resume/static/resume/styles.css
+++ b/resume/static/resume/styles.css
@@ -40,6 +40,24 @@ body::before {
     color: white;
 }
 
+/* DANGER BUTTON */
+.btn-custom-danger {
+    background-color: transparent; 
+    border: 4px solid #7e1b25;
+    padding: 7px 14px;
+    color: white;
+    background: linear-gradient(135deg, rgb(220, 53, 69, 0.5), rgba(0, 0, 0, 0.7));
+    background-size: 200% 200%; /* Makes the gradient larger for animation */
+    transition: background-position 0.4s ease, border-color 0.4s ease; /* Transition for background position */
+    background-position: left center; /* Initial position of the gradient */
+}
+
+.btn-custom-danger:hover {
+    background-position: right center; /* Move to the right on hover */
+    border-color: #4a0c0c;
+    color: white;
+}
+
 
 /* NAV MESSAGE */
 .message-container {
