--- a/resume/templates/resume/view_resumes.html
+++ b/resume/templates/resume/view_resumes.html
@@ -1,6 +1,6 @@
 {% extends 'resume/base.html' %}
 
-{% block title %}Form{% endblock %}
+{% block title %}Download Resume{% endblock %}
 
 {% block custom_styles %}
 <style>
