--- a/resume/templates/resume/base.html
+++ b/resume/templates/resume/base.html
@@ -10,28 +10,30 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=B612+Mono:ital,wght@0,400;0,700;1,400;1,700&family=M+PLUS+Code+Latin:wght@100..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'resume/styles.css' %}">
+    <link rel="shortcut icon" type="image/png"  width="100" height="100" href="{% static 'resume/logo-white.png' %}">
     {% block custom_styles %}
     <style>
         body {
             overflow: hidden; /* Default style */
         }
     </style>
-    {% comment %} <link rel="shortcut icon" type="image/png" href="{% static 'food/LOGO.png' %}"> {% endcomment %}
     {% endblock %}
 </head> 
 <body class="bg-dark text-light">
     <nav class="navbar navbar-dark mx-3">
         <a class="navbar-brand mt-2" href="{% url 'home' %}">
-            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-file-person mb-1" viewBox="0 0 16 16">
+            {% comment %} <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-file-person mb-1" viewBox="0 0 16 16">
                 <path d="M12 1a1 1 0 0 1 1 1v10.755S12 11 8 11s-5 1.755-5 1.755V2a1 1 0 0 1 1-1zM4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
                 <path d="M8 10a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
-            </svg>
-            <span>ResumeCrafter</span>
-        </a>
+            </svg> {% endcomment %}
+            <img src="{% static 'resume/logo-white-2.png' %}" width="200" height="35" alt="Icon" class="mb-1" >
 
+            {% comment %} <span style="margin-left : 0px;">ResumeCrafter</span> {% endcomment %}
+        </a>
+    
         <div class="ml-auto d-flex align-items-center ">
             {% if messages %}
-            <div class="message-container mr-3 mt-1 text-light text-right">
+            <div class="message-container mr-2 mt-3 text-light text-right d-none d-custom-block"> <!-- Hidden on small screens -->
                 {% for message in messages %}
                 <span class="typewriter">{{ message }}</span>
                 {% endfor %}
@@ -40,14 +42,16 @@
     
             {% if user.is_authenticated %}
                 {% if not messages %}
-                    <span >Hello, <span style="color: #418da6;">{{ user.username }}</spna>!😎</span>
+                    <span class="message-container mr-1 mt-2 text-light text-right d-none dd-custom-block">Hello, <span style="color: #418da6;" >{{ user.username }}</span>!😎</span>
                 {% endif %}
-                <a href="{% url 'logout' %}" class="btn btn-outline-light ml-2 mb-1">Logout</a>
+                <a href="{% url 'logout' %}" class="btn btn-outline-light ml-2 mt-2">Logout</a>
             {% else %}
-                <a href="{% url 'login' %}" class="btn btn-outline-light ml-2">Login</a>
+                <a href="{% url 'login' %}" class="btn btn-outline-light mt-2">Login</a>
             {% endif %}
         </div>
     </nav>
+    
+    
     {% block content %}
     
     {% endblock %}
