--- a/resume/templates/resume/delete_confirm.html
+++ b/resume/templates/resume/delete_confirm.html
@@ -4,13 +4,7 @@
 
 {% block content %}
 
-{% comment %} <h2>Are you sure you want to delete this profile?</h2>
-<p></p>
-<form method="POST">
-    {% csrf_token %}
-    <button type="submit" class="btn btn-danger">Yes, delete</button>
-    <a href="{% url 'resumes' %}" class="btn btn-secondary">Cancel</a>
-</form> {% endcomment %}
+
 
 <div class="container text-center mt-5 py-5">
     <div class="py-3 mt-5 rounded" style="border: 2px solid white; margin-top: 20px;">
@@ -18,8 +12,8 @@
         <p class="lead">Are you sure you want to delete this resume?</p>
         <form method="POST">
             {% csrf_token %}
-            <button type="submit" class="btn btn-custom-danger btn-lg mt-3">Yes, delete</button>
-            <a href="{% url 'resumes' %}" class="btn btn-custom btn-lg mt-3">Cancel</a>
+            <button type="submit" class="btn btn-custom-danger mt-3">Yes, delete</button>
+            <a href="{% url 'resumes' %}" class="btn btn-custom mt-3">Cancel</a>
         </form>
     </div>
 </div>
